compiler_parser_hw2/y.output
State 42 conflicts: 2 shift/reduce
State 115 conflicts: 2 shift/reduce
State 116 conflicts: 2 shift/reduce
State 117 conflicts: 2 shift/reduce
State 118 conflicts: 2 shift/reduce
State 119 conflicts: 2 shift/reduce
State 120 conflicts: 2 shift/reduce
State 121 conflicts: 1 shift/reduce
State 123 conflicts: 2 shift/reduce
State 124 conflicts: 2 shift/reduce
State 125 conflicts: 2 shift/reduce
State 126 conflicts: 2 shift/reduce
State 127 conflicts: 2 shift/reduce
State 128 conflicts: 2 shift/reduce
State 131 conflicts: 2 shift/reduce
State 132 conflicts: 2 shift/reduce
State 133 conflicts: 2 shift/reduce
State 134 conflicts: 2 shift/reduce
State 135 conflicts: 2 shift/reduce
State 136 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement
    3              | Statement

    4 Statement: DeclarationStmt NEWLINE
    5          | SimpleStmt NEWLINE
    6          | Block
    7          | IfStmt
    8          | ForStmt
    9          | PrintStmt NEWLINE
   10          | NEWLINE

   11 Block: '{' StatementList '}'

   12 Operand: Literal
   13        | Identifier
   14        | '(' Expression ')'

   15 Literal: INT_LIT
   16        | FLOAT_LIT
   17        | BOOL_LIT
   18        | '"' STRING_LIT '"'

   19 ConversionExpr: INT '(' Factor ')'
   20               | FLOAT '(' Factor ')'

   21 TypeName: INT
   22         | FLOAT
   23         | STRING
   24         | BOOL

   25 ArrayType: '[' Literal ']'

   26 DeclarationStmt: VAR IDENT TypeName
   27                | VAR IDENT TypeName '=' Factor
   28                | VAR IDENT ArrayType TypeName

   29 Identifier: IDENT

   30 SimpleStmt: AssignmentStmt
   31           | IncDecStmt
   32           | LogiLOR
   33           | ErrorStmt

   34 AssignmentStmt: IdentifierStmt '=' Expression
   35               | IdentifierStmt ADD_ASSIGN Expression
   36               | IdentifierStmt SUB_ASSIGN Expression
   37               | IdentifierStmt MUL_ASSIGN Expression
   38               | IdentifierStmt QUO_ASSIGN Expression
   39               | IdentifierStmt REM_ASSIGN Expression

   40 IdentifierStmt: Identifier
   41               | Identifier ArrayType

   42 IncDecStmt: Factor INC
   43           | Factor DEC

   44 ErrorStmt: Literal '=' Expression
   45          | Literal ADD_ASSIGN Expression
   46          | Literal SUB_ASSIGN Expression
   47          | Literal MUL_ASSIGN Expression
   48          | Literal QUO_ASSIGN Expression
   49          | Literal REM_ASSIGN Expression

   50 IfStmt: IF Comparison
   51       | ELSE IfStmt
   52       | ELSE Block

   53 ForStmt: FOR Comparison
   54        | FOR SimpleStmt ';' Comparison ';' SimpleStmt

   55 PrintStmt: PRINT '(' LogiLOR ')'
   56          | PRINTLN '(' LogiLOR ')'

   57 LogiLOR: LogiLOR LOR LogiLAND
   58        | LogiLAND

   59 LogiLAND: LogiLAND LAND Comparison
   60         | Comparison

   61 Comparison: Comparison GTR Expression
   62           | Comparison LSS Expression
   63           | Comparison GEQ Expression
   64           | Comparison LEQ Expression
   65           | Comparison EQL Expression
   66           | Comparison NEQ Expression
   67           | Expression

   68 Expression: Expression '+' Term
   69           | Expression '-' Term
   70           | Term

   71 Term: Term '*' Factor
   72     | Term '/' Factor
   73     | Term '%' Factor
   74     | ConversionExpr
   75     | Factor

   76 Factor: Operand
   77       | Identifier '[' Expression ']'
   78       | TRUE
   79       | FALSE
   80       | UnaryExpr

   81 UnaryExpr: '+' Factor
   82          | '-' Factor
   83          | '!' Factor


Terminals, with rules where they appear

$end (0) 0
'!' (33) 83
'"' (34) 18
'%' (37) 73
'(' (40) 14 19 20 55 56
')' (41) 14 19 20 55 56
'*' (42) 71
'+' (43) 68 81
'-' (45) 69 82
'/' (47) 72
';' (59) 54
'=' (61) 27 34 44
'[' (91) 25 77
']' (93) 25 77
'{' (123) 11
'}' (125) 11
error (256)
VAR (258) 26 27 28
INT (259) 19 21
FLOAT (260) 20 22
BOOL (261) 24
STRING (262) 23
NEWLINE (263) 4 5 9 10
INC (264) 42
DEC (265) 43
GEQ (266) 63
LEQ (267) 64
EQL (268) 65
NEQ (269) 66
GTR (270) 61
LSS (271) 62
ADD_ASSIGN (272) 35 45
SUB_ASSIGN (273) 36 46
MUL_ASSIGN (274) 37 47
QUO_ASSIGN (275) 38 48
REM_ASSIGN (276) 39 49
LAND (277) 59
LOR (278) 57
PRINT (279) 55
PRINTLN (280) 56
IF (281) 50
ELSE (282) 51 52
FOR (283) 53 54
TRUE (284) 78
FALSE (285) 79
INT_LIT (286) 15
FLOAT_LIT (287) 16
STRING_LIT (288) 18
BOOL_LIT (289) 17
IDENT (290) 26 27 28 29


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Program (52)
    on left: 1, on right: 0
StatementList (53)
    on left: 2 3, on right: 1 2 11
Statement (54)
    on left: 4 5 6 7 8 9 10, on right: 2 3
Block (55)
    on left: 11, on right: 6 52
Operand (56)
    on left: 12 13 14, on right: 76
Literal (57)
    on left: 15 16 17 18, on right: 12 25 44 45 46 47 48 49
ConversionExpr (58)
    on left: 19 20, on right: 74
TypeName (59)
    on left: 21 22 23 24, on right: 26 27 28
ArrayType (60)
    on left: 25, on right: 28 41
DeclarationStmt (61)
    on left: 26 27 28, on right: 4
Identifier (62)
    on left: 29, on right: 13 40 41 77
SimpleStmt (63)
    on left: 30 31 32 33, on right: 5 54
AssignmentStmt (64)
    on left: 34 35 36 37 38 39, on right: 30
IdentifierStmt (65)
    on left: 40 41, on right: 34 35 36 37 38 39
IncDecStmt (66)
    on left: 42 43, on right: 31
ErrorStmt (67)
    on left: 44 45 46 47 48 49, on right: 33
IfStmt (68)
    on left: 50 51 52, on right: 7 51
ForStmt (69)
    on left: 53 54, on right: 8
PrintStmt (70)
    on left: 55 56, on right: 9
LogiLOR (71)
    on left: 57 58, on right: 32 55 56 57
LogiLAND (72)
    on left: 59 60, on right: 57 58 59
Comparison (73)
    on left: 61 62 63 64 65 66 67, on right: 50 53 54 59 60 61 62 63
    64 65 66
Expression (74)
    on left: 68 69 70, on right: 14 34 35 36 37 38 39 44 45 46 47 48
    49 61 62 63 64 65 66 67 68 69 77
Term (75)
    on left: 71 72 73 74 75, on right: 68 69 70 71 72 73
Factor (76)
    on left: 76 77 78 79 80, on right: 19 20 27 42 43 71 72 73 75 81
    82 83
UnaryExpr (77)
    on left: 81 82 83, on right: 80


State 0

    0 $accept: . Program $end

    VAR        shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    NEWLINE    shift, and go to state 4
    PRINT      shift, and go to state 5
    PRINTLN    shift, and go to state 6
    IF         shift, and go to state 7
    ELSE       shift, and go to state 8
    FOR        shift, and go to state 9
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    INT_LIT    shift, and go to state 12
    FLOAT_LIT  shift, and go to state 13
    BOOL_LIT   shift, and go to state 14
    IDENT      shift, and go to state 15
    '{'        shift, and go to state 16
    '('        shift, and go to state 17
    '"'        shift, and go to state 18
    '+'        shift, and go to state 19
    '-'        shift, and go to state 20
    '!'        shift, and go to state 21

    Program          go to state 22
    StatementList    go to state 23
    Statement        go to state 24
    Block            go to state 25
    Operand          go to state 26
    Literal          go to state 27
    ConversionExpr   go to state 28
    DeclarationStmt  go to state 29
    Identifier       go to state 30
    SimpleStmt       go to state 31
    AssignmentStmt   go to state 32
    IdentifierStmt   go to state 33
    IncDecStmt       go to state 34
    ErrorStmt        go to state 35
    IfStmt           go to state 36
    ForStmt          go to state 37
    PrintStmt        go to state 38
    LogiLOR          go to state 39
    LogiLAND         go to state 40
    Comparison       go to state 41
    Expression       go to state 42
    Term             go to state 43
    Factor           go to state 44
    UnaryExpr        go to state 45


State 1

   26 DeclarationStmt: VAR . IDENT TypeName
   27                | VAR . IDENT TypeName '=' Factor
   28                | VAR . IDENT ArrayType TypeName

    IDENT  shift, and go to state 46


State 2

   19 ConversionExpr: INT . '(' Factor ')'

    '('  shift, and go to state 47


State 3

   20 ConversionExpr: FLOAT . '(' Factor ')'

    '('  shift, and go to state 48


State 4

   10 Statement: NEWLINE .

    $default  reduce using rule 10 (Statement)


State 5

   55 PrintStmt: PRINT . '(' LogiLOR ')'

    '('  shift, and go to state 49


State 6

   56 PrintStmt: PRINTLN . '(' LogiLOR ')'

    '('  shift, and go to state 50


State 7

   50 IfStmt: IF . Comparison

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    INT_LIT    shift, and go to state 12
    FLOAT_LIT  shift, and go to state 13
    BOOL_LIT   shift, and go to state 14
    IDENT      shift, and go to state 15
    '('        shift, and go to state 17
    '"'        shift, and go to state 18
    '+'        shift, and go to state 19
    '-'        shift, and go to state 20
    '!'        shift, and go to state 21

    Operand         go to state 26
    Literal         go to state 51
    ConversionExpr  go to state 28
    Identifier      go to state 52
    Comparison      go to state 53
    Expression      go to state 42
    Term            go to state 43
    Factor          go to state 54
    UnaryExpr       go to state 45


State 8

   51 IfStmt: ELSE . IfStmt
   52       | ELSE . Block

    IF    shift, and go to state 7
    ELSE  shift, and go to state 8
    '{'   shift, and go to state 16

    Block   go to state 55
    IfStmt  go to state 56


State 9

   53 ForStmt: FOR . Comparison
   54        | FOR . SimpleStmt ';' Comparison ';' SimpleStmt

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    INT_LIT    shift, and go to state 12
    FLOAT_LIT  shift, and go to state 13
    BOOL_LIT   shift, and go to state 14
    IDENT      shift, and go to state 15
    '('        shift, and go to state 17
    '"'        shift, and go to state 18
    '+'        shift, and go to state 19
    '-'        shift, and go to state 20
    '!'        shift, and go to state 21

    Operand         go to state 26
    Literal         go to state 27
    ConversionExpr  go to state 28
    Identifier      go to state 30
    SimpleStmt      go to state 57
    AssignmentStmt  go to state 32
    IdentifierStmt  go to state 33
    IncDecStmt      go to state 34
    ErrorStmt       go to state 35
    LogiLOR         go to state 39
    LogiLAND        go to state 40
    Comparison      go to state 58
    Expression      go to state 42
    Term            go to state 43
    Factor          go to state 44
    UnaryExpr       go to state 45


State 10

   78 Factor: TRUE .

    $default  reduce using rule 78 (Factor)


State 11

   79 Factor: FALSE .

    $default  reduce using rule 79 (Factor)


State 12

   15 Literal: INT_LIT .

    $default  reduce using rule 15 (Literal)


State 13

   16 Literal: FLOAT_LIT .

    $default  reduce using rule 16 (Literal)


State 14

   17 Literal: BOOL_LIT .

    $default  reduce using rule 17 (Literal)


State 15

   29 Identifier: IDENT .

    $default  reduce using rule 29 (Identifier)


State 16

   11 Block: '{' . StatementList '}'

    VAR        shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    NEWLINE    shift, and go to state 4
    PRINT      shift, and go to state 5
    PRINTLN    shift, and go to state 6
    IF         shift, and go to state 7
    ELSE       shift, and go to state 8
    FOR        shift, and go to state 9
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    INT_LIT    shift, and go to state 12
    FLOAT_LIT  shift, and go to state 13
    BOOL_LIT   shift, and go to state 14
    IDENT      shift, and go to state 15
    '{'        shift, and go to state 16
    '('        shift, and go to state 17
    '"'        shift, and go to state 18
    '+'        shift, and go to state 19
    '-'        shift, and go to state 20
    '!'        shift, and go to state 21

    StatementList    go to state 59
    Statement        go to state 24
    Block            go to state 25
    Operand          go to state 26
    Literal          go to state 27
    ConversionExpr   go to state 28
    DeclarationStmt  go to state 29
    Identifier       go to state 30
    SimpleStmt       go to state 31
    AssignmentStmt   go to state 32
    IdentifierStmt   go to state 33
    IncDecStmt       go to state 34
    ErrorStmt        go to state 35
    IfStmt           go to state 36
    ForStmt          go to state 37
    PrintStmt        go to state 38
    LogiLOR          go to state 39
    LogiLAND         go to state 40
    Comparison       go to state 41
    Expression       go to state 42
    Term             go to state 43
    Factor           go to state 44
    UnaryExpr        go to state 45


State 17

   14 Operand: '(' . Expression ')'

    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    INT_LIT    shift, and go to state 12
    FLOAT_LIT  shift, and go to state 13
    BOOL_LIT   shift, and go to state 14
    IDENT      shift, and go to state 15
    '('        shift, and go to state 17
    '"'        shift, and go to state 18
    '+'        shift, and go to state 19
    '-'        shift, and go to state 20
    '!'        shift, and go to state 21

    Operand         go to state 26
    Literal         go to state 51
    ConversionExpr  go to state 28
    Identifier      go to state 52
    Expression      go to state 60
    Term            go to state 43
    Factor          go to state 54
    UnaryExpr       go to state 45


State 18

   18 Literal: '"' . STRING_LIT '"'

    STRING_LIT  shift, and go to state 61


State 19

   81 UnaryExpr: '+' . Factor

    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    INT_LIT    shift, and go to state 12
    FLOAT_LIT  shift, and go to state 13
    BOOL_LIT   shift, and go to state 14
    IDENT      shift, and go to state 15
    '('        shift, and go to state 17
    '"'        shift, and go to state 18
    '+'        shift, and go to state 19
    '-'        shift, and go to state 20
    '!'        shift, and go to state 21

    Operand     go to state 26
    Literal     go to state 51
    Identifier  go to state 52
    Factor      go to state 62
    UnaryExpr   go to state 45


State 20

   82 UnaryExpr: '-' . Factor

    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    INT_LIT    shift, and go to state 12
    FLOAT_LIT  shift, and go to state 13
    BOOL_LIT   shift, and go to state 14
    IDENT      shift, and go to state 15
    '('        shift, and go to state 17
    '"'        shift, and go to state 18
    '+'        shift, and go to state 19
    '-'        shift, and go to state 20
    '!'        shift, and go to state 21

    Operand     go to state 26
    Literal     go to state 51
    Identifier  go to state 52
    Factor      go to state 63
    UnaryExpr   go to state 45


State 21

   83 UnaryExpr: '!' . Factor

    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    INT_LIT    shift, and go to state 12
    FLOAT_LIT  shift, and go to state 13
    BOOL_LIT   shift, and go to state 14
    IDENT      shift, and go to state 15
    '('        shift, and go to state 17
    '"'        shift, and go to state 18
    '+'        shift, and go to state 19
    '-'        shift, and go to state 20
    '!'        shift, and go to state 21

    Operand     go to state 26
    Literal     go to state 51
    Identifier  go to state 52
    Factor      go to state 64
    UnaryExpr   go to state 45


State 22

    0 $accept: Program . $end

    $end  shift, and go to state 65


State 23

    1 Program: StatementList .
    2 StatementList: StatementList . Statement

    VAR        shift, and go to state 1
    INT        shift, and go to state 2
    FLOAT      shift, and go to state 3
    NEWLINE    shift, and go to state 4
    PRINT      shift, and go to state 5
    PRINTLN    shift, and go to state 6
    IF         shift, and go to state 7
    ELSE       shift, and go to state 8
    FOR        shift, and go to state 9
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    INT_LIT    shift, and go to state 12
    FLOAT_LIT  shift, and go to state 13
    BOOL_LIT   shift, and go to state 14
    IDENT      shift, and go to state 15
    '{'        shift, and go to state 16
    '('        shift, and go to state 17
    '"'        shift, and go to state 18
    '+'        shift, and go to state 19
    '-'        shift, and go to state 20
    '!'        shift, and go to state 21

    $default  reduce using rule 1 (Program)

    Statement        go to state 66
    Block            go to state 25
    Operand          go to state 26
    Literal          go to state 27
    ConversionExpr   go to state 28
    DeclarationStmt  go to state 29
    Identifier       go to state 30
    SimpleStmt       go to state 31
    AssignmentStmt   go to state 32
    IdentifierStmt   go to state 33
    IncDecStmt       go to state 34
    ErrorStmt        go to state 35
    IfStmt           go to state 36
    ForStmt          go to state 37
    PrintStmt        go to state 38
    LogiLOR          go to state 39
    LogiLAND         go to state 40
    Comparison       go to state 41
    Expression       go to state 42
    Term             go to state 43
    Factor           go to state 44
    UnaryExpr        go to state 45


State 24

    3 StatementList: Statement .

    $default  reduce using rule 3 (StatementList)


State 25

    6 Statement: Block .

    $default  reduce using rule 6 (Statement)


State 26

   76 Factor: Operand .

    $default  reduce using rule 76 (Factor)


State 27

   12 Operand: Literal .
   44 ErrorStmt: Literal . '=' Expression
   45          | Literal . ADD_ASSIGN Expression
   46          | Literal . SUB_ASSIGN Expression
   47          | Literal . MUL_ASSIGN Expression
   48          | Literal . QUO_ASSIGN Expression
   49          | Literal . REM_ASSIGN Expression

    ADD_ASSIGN  shift, and go to state 67
    SUB_ASSIGN  shift, and go to state 68
    MUL_ASSIGN  shift, and go to state 69
    QUO_ASSIGN  shift, and go to state 70
    REM_ASSIGN  shift, and go to state 71
    '='         shift, and go to state 72

    $default  reduce using rule 12 (Operand)


State 28

   74 Term: ConversionExpr .

    $default  reduce using rule 74 (Term)


State 29

    4 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 73


State 30

   13 Operand: Identifier .
   40 IdentifierStmt: Identifier .
   41               | Identifier . ArrayType
   77 Factor: Identifier . '[' Expression ']'

    '['  shift, and go to state 74

    ADD_ASSIGN  reduce using rule 40 (IdentifierStmt)
    SUB_ASSIGN  reduce using rule 40 (IdentifierStmt)
    MUL_ASSIGN  reduce using rule 40 (IdentifierStmt)
    QUO_ASSIGN  reduce using rule 40 (IdentifierStmt)
    REM_ASSIGN  reduce using rule 40 (IdentifierStmt)
    '='         reduce using rule 40 (IdentifierStmt)
    $default    reduce using rule 13 (Operand)

    ArrayType  go to state 75


State 31

    5 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 76


State 32

   30 SimpleStmt: AssignmentStmt .

    $default  reduce using rule 30 (SimpleStmt)


State 33

   34 AssignmentStmt: IdentifierStmt . '=' Expression
   35               | IdentifierStmt . ADD_ASSIGN Expression
   36               | IdentifierStmt . SUB_ASSIGN Expression
   37               | IdentifierStmt . MUL_ASSIGN Expression
   38               | IdentifierStmt . QUO_ASSIGN Expression
   39               | IdentifierStmt . REM_ASSIGN Expression
